* Two lines for minibuffer. * Be more verbose: C-c to copy, RET to close. * Reduced flicker after read commands. * Fixed height for minibuffer.

--- a/code/org-info-js/stylesheet.css
+++ b/code/org-info-js/stylesheet.css
@@ -2,7 +2,7 @@ body
 {
   width:60em;
   padding:3em;
-  line-height:1.3em;
+  line-height:1.4em;
   color:#333333;
   font-size:10pt;
   font-family:"DejaVu Sans",Verdana,Arial,sans-serif; /*"Bitstream Vera Serif", serif;*/
@@ -72,10 +72,10 @@ img, a img
 
 #table-of-contents{ }
 
-.outline-1{}
-.outline-2{margin-top:2em;margin-left:0.5em}
-.outline-3{margin-left:1em}
-.outline-4{margin-left:1.5em}
+.outline-1{margin-bottom:2.5em;}
+.outline-2{margin-bottom:2em;margin-left:0.5em}
+.outline-3{margin-bottom:1.5em;margin-left:1em}
+.outline-4{margin-bottom:1.5em;margin-left:1.5em}
 
 ul
 {
@@ -92,6 +92,11 @@ li
 dt
 {
   font-weight:bold;
+}
+
+dd
+{
+  margin-left:3em;
 }
 
 p
@@ -273,21 +278,37 @@ div#postamble
 
 #org-info-js_console
 {
-  background-color:#ccccff;
   color:#333333;
+  margin:0px;
+  background-color:#ffffff;
 }
 
 #org-info-js_console-input
 {
-  background-color:#ccccff;
+  background-color:#ffffff;
+  border-style:none;
+  color:#333333;
+  padding-left:10px;
+  vertical-align:middle;
 }
 
 #org-info-js_console-label
 {
-  font-size:10px;
+  font-size:11px;
   font-weight:bold;
+  padding-left:10px;
   font-family:Verdana,Arial,sans-serif;
   vertical-align:middle;
+}
+
+.org-info-js_console-label-warning
+{
+  color:#cc0000;
+}
+
+#org-info-js_console-container
+{
+  border:1px solid #cccccc;
 }
 
 .org-info-js_search-highlight
